--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PictureOfTheDay</string>
+    <string name="search_wiki">WIKIPEDIA</string>
+    <string name="wiki_helper_text">counter</string>
+    <string name="photo_of_the_day_stub">photo of the day</string>
+    <string name="favourite">избранное</string>
+    <string name="settings">настройки</string>
 </resources>
