--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="settings">настройки</string>
     <string name="app_theme">AppTheme</string>
     <string name="mars_theme">MarsTheme</string>
+    <string name="current_date">Текущая дата</string>
+    <string name="yesterday_date">Вчерашняя дата</string>
 </resources>
