--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="note">Заметка</string>
     <string name="header">Заголовок</string>
     <string name="new_note">Новая заметка</string>
+    <string name="picture">"Picture: "</string>
 </resources>
