--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="header">Заголовок</string>
     <string name="new_note">Новая заметка</string>
     <string name="picture">"Picture: "</string>
+    <string name="download">download</string>
 </resources>
